<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="delete">Delete all tasks</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="hide_completed_tasks">Hide completed tasks</string>
    <string name="show_important_tasks">Show important tasks</string>
</resources>